# drt-reproducible-contract-build-examples-sc

./: .gitignore  Cargo.toml  README.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  on_pull_request_build_contracts.yml  on_release_build_contracts.yml
adder/: .gitignore  Cargo.toml
adder/meta/: Cargo.toml
adder/meta/src/: main.rs
adder/src/: adder.rs
adder/wasm/: Cargo.toml
adder/wasm/src/: lib.rs
lottery-dct/: Cargo.toml
lottery-dct/meta/: Cargo.toml
lottery-dct/meta/src/: main.rs
lottery-dct/src/: lottery.rs  lottery_info.rs  status.rs
lottery-dct/wasm/: Cargo.toml
lottery-dct/wasm/src/: lib.rs
multisig/: .gitignore  Cargo.toml  sc-config.toml
multisig/meta/: Cargo.toml
multisig/meta/src/: main.rs
multisig/src/: action.rs  multisig.rs  multisig_events.rs  multisig_perform.rs  multisig_propose.rs  multisig_state.rs  user_role.rs
multisig/wasm/: Cargo.toml
multisig/wasm-multisig-full/: Cargo.toml
multisig/wasm-multisig-full/src/: lib.rs
multisig/wasm-multisig-view/: Cargo.toml
multisig/wasm-multisig-view/src/: lib.rs
multisig/wasm/src/: lib.rs
