[package]
name = "multisig"
version = "0.0.0"
authors = ["you"]
edition = "2021"
publish = false

[lib]
path = "src/multisig.rs"

[dependencies.dharitri-sc]
version = "=0.13.4"

[dependencies.dharitri-sc-modules]
version = "=0.13.4"

[dev-dependencies]
num-bigint = "0.4.2"
num-traits = "0.2"
hex = "0.4"

[dev-dependencies.dharitri-sc-scenario]
version = "=0.13.4"

