[package]
name = "adder-wasm"
version = "0.0.0"
authors = [ "you",]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[dependencies.adder]
path = ".."

[dependencies.dharitri-wasm-node]
version = "0.10.4"

[dependencies.dharitri-wasm-output]
version = "0.10.4"

features = ["wasm-output-mode"]

[workspace]
members = ["."]
